@@ -1,7 +1,9 @@
 1.3.8 - TBD
 
+* Fixed chunk loading error that caused Chunky to hang while loading chunks
+  if a font texture is missing.
 * Launcher v1.8.12: the launcher now always tries to launch the embedded
-version
+  version
 
 1.3.7 - 2015-10-17
 
